Enemy AI in progress

--- a/Odyssey/Assembly-CSharp.csproj
+++ b/Odyssey/Assembly-CSharp.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Assets\TestingFolder\Core\FollowCamera.cs" />
     <Compile Include="Assets\TestingFolder\Player\weapons\weaponScript.cs" />
     <Compile Include="Assets\TutorialInfo\Scripts\Readme.cs" />
+    <Compile Include="Assets\TestingFolder\Enemy\Enemy AI\AIMover.cs" />
   </ItemGroup>
   <ItemGroup>
      <None Include="Assets\Allegorithmic\Plugins\Substance.Engine.dll" />
