Trying to ignore Odyessy/Library/ArtifactDB

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ Odyssey/Library/ArtifactDB
 Odyssey/Library/ArtifactDB
 Odyssey/Library/ArtifactDB
 Odyssey/Library/ArtifactDB
+Odyssey/Library/ArtifactDB
